# audio-extraction-service

./: .gitignore  README.md  template.yml
service/: .env.example  Dockerfile  pyproject.toml
service/app/: __init__.py  exceptions.py  main.py
service/app/api/: router.py
service/app/api/routes/: events.py  health.py
service/app/api/v1/: __init__.py  router.py
service/app/api/v1/routes/: health.py
service/app/core/: config.py  media_types.py
service/app/schemas/: __init__.py  events.py  health.py  s3_events.py  sqs.py
service/app/services/: event_processor.py
service/app/utils/: __init__.py  ffmpeg_utils.py  file_validation.py  logging.py  s3_utils.py
service/tests/: __init__.py  conftest.py  test_audio_validation.py  test_events.py  test_health.py  test_media_types.py  test_s3_events.py  test_services.py
