[project]
name = "audio-extraction-service"
version = "0.1.0"
description = "Audio extraction service with AWS Lambda Web Adapter and SQS integration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.14",
    "fastapi-cli>=0.0.7",
    "ffmpeg-python>=0.2.0",
    "pydantic-settings>=2.10.1",
    "uvicorn[standard]>=0.35.0",
    "boto3>=1.39.3",
    "magika>=0.6.2",
]

[dependency-groups]
dev = [
    "cfn-lint[graph]>=1.37.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "httpx>=0.25.0",
    "types-boto3[essential]>=1.39.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--strict-markers", "--strict-config", "--verbose"]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/__pycache__/*", "*/venv/*", "*/.venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
